--- a/my_tennis_club/requirements.txt
+++ b/my_tennis_club/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 attrs==23.1.0
 Babel==2.13.1
 backoff==2.2.1
+beautifulsoup4==4.12.2
 blinker==1.7.0
 certifi==2023.7.22
 cffi==1.16.0
@@ -13,6 +14,7 @@ comtypes==1.2.0
 decorator==5.1.1
 distlib==0.3.7
 Django==4.2.7
+django-bootstrap-v5==1.0.11
 EasyProcess==1.1
 entrypoint2==1.1
 exceptiongroup==1.1.3
@@ -71,6 +73,7 @@ selenium==4.15.2
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 source==1.2.0
 sqlparse==0.4.4
 trio==0.23.1
